--- a/styles/blog.css
+++ b/styles/blog.css
@@ -3,5 +3,15 @@ div{
     padding: 10px;
     font-size: small;
     border-radius: 5px ;
-    box-shadow: blueviolet;
+    margin-top: 10px;
+}
+.ururu{
+    background-color: aquamarine;
+    padding : 20px ; 
+    font-size: large;
+}
+.guru{
+    background-color: yellowgreen;
+    padding : 20px ; 
+    margin-bottom: 5px;
 }
